--- a/TASK 4.ipynb
+++ b/TASK 4.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "**TASK 4 - Exploratory Data Analysis - Terrorism**\n",
     "\n",
-    "**Author : SATHISH PRASAD A**\n",
+    "**Author : KIRUTHIGA MOHAN**\n",
     "\n",
     "---\n",
     "\n",
